--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oauth2-oidc-client",
-  "version": "1.2.3",
+  "version": "1.2.6",
   "description": "Universal OAuth2/OpenID Connect Client library",
   "main": "dist/index",
   "typings": "dist/index",
@@ -16,11 +16,14 @@
   },
   "dependencies": {
     "axios": "^0.18.1",
-    "rxjs": "^5.5.6"
+    "base64url": "^3.0.1",
+    "fast-sha256": "^1.3.0",
+    "rxjs": "^5.5.6",
+    "tweetnacl-util": "^0.15.1"
   },
   "devDependencies": {
     "tslint": "^5.9.1",
-    "typescript": "^2.8.0"
+    "typescript": "3.4.5"
   },
   "keywords": [
     "openid",
